--- a/templates/register.html
+++ b/templates/register.html
@@ -43,35 +43,21 @@
     </div>
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
-        <div class="navbar-inneะr main-menu">
+        <div class="navbar-inner main-menu">
           <a href="/" class="logo pull-left"
             ><img
-              src="../static/themes/images//logo.png"
+              src="../static/themes/images/logo.png"
               class="site_logo"
               alt=""
+              style="width: 150px; height: 45px"
           /></a>
           <nav id="menu" class="pull-right">
             <ul>
-              <li>
-                <a href="./products.html">Woman</a>
-                <ul>
-                  <li><a href="./products.html">Lacinia nibh</a></li>
-                  <li><a href="./products.html">Eget molestie</a></li>
-                  <li><a href="./products.html">Varius purus</a></li>
-                </ul>
-              </li>
-              <li><a href="./products.html">Man</a></li>
-              <li>
-                <a href="./products.html">Sport</a>
-                <ul>
-                  <li><a href="./products.html">Gifts and Tech</a></li>
-                  <li><a href="./products.html">Ties and Hats</a></li>
-                  <li><a href="./products.html">Cold Weather</a></li>
-                </ul>
-              </li>
-              <li><a href="./products.html">Hangbag</a></li>
-              <li><a href="./products.html">Best Seller</a></li>
-              <li><a href="./products.html">Top Seller</a></li>
+              <li><a href="./products.html">FIN</a></li>
+              <li><a href="./products.html">S Project High</a></li>
+              <li><a href="./products.html">Preduce</a></li>
+              <li><a href="./products.html">April</a></li>
+              <li><a href="./products.html">WM</a></li>
             </ul>
           </nav>
         </div>
