--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -31,7 +31,6 @@
               <li>
                 <a href="{{ url_for ('checkout' , Data=ID) }}">Checkout</a>
               </li>
-              <li><a href="register" hidden>Login</a></li>
             </ul>
           </div>
         </div>
@@ -40,34 +39,20 @@
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
-          <a href="{{ url_for ('index' , Data=ID) }}" class="logo pull-left"
-            ><img
-              src="../static/themes/images/logo.png"
-              class="site_logo"
-              alt=""
-          /></a>
+          {% if Data != 0 %}
+          <a href="{{ url_for ('index' , Data=Data ) }}" class="logo pull-left">
+          {% else %}
+          <a href="{{ url_for ('index' , Data=0 ) }}" class="logo pull-left">
+          {% endif %}
+          <img src="../static/themes/images/logo.png" class="site_logo" alt="" style="width:150px;height:45px;"/>
+          </a>
           <nav id="menu" class="pull-right">
             <ul>
-              <li>
-                <a href="./products.html">Woman</a>
-                <ul>
-                  <li><a href="./products.html">Lacinia nibh</a></li>
-                  <li><a href="./products.html">Eget molestie</a></li>
-                  <li><a href="./products.html">Varius purus</a></li>
-                </ul>
-              </li>
-              <li><a href="./products.html">Man</a></li>
-              <li>
-                <a href="./products.html">Sport</a>
-                <ul>
-                  <li><a href="./products.html">Gifts and Tech</a></li>
-                  <li><a href="./products.html">Ties and Hats</a></li>
-                  <li><a href="./products.html">Cold Weather</a></li>
-                </ul>
-              </li>
-              <li><a href="./products.html">Hangbag</a></li>
-              <li><a href="./products.html">Best Seller</a></li>
-              <li><a href="./products.html">Top Seller</a></li>
+              <li><a href="./products.html">FIN</a></li>
+              <li><a href="./products.html">S Project High</a></li>
+              <li><a href="./products.html">Preduce</a></li>
+              <li><a href="./products.html">April</a></li>
+              <li><a href="./products.html">WM</a></li>
             </ul>
           </nav>
         </div>
@@ -161,16 +146,14 @@
                 >
                   <p>&nbsp;</p>
                   <input
-                    type="int"
+                    type="hidden"
                     id="Data"
-                    hidden
                     value="{{ ID }}"
                     name="Data"
                   />
                   <input
-                    type="text"
+                  type="hidden"
                     id="DataProduct"
-                    hidden
                     name="DataProduct"
                     value="{{ DataProduct[0] }}"
                   />
