--- a/templates/index.html
+++ b/templates/index.html
@@ -12,25 +12,27 @@
     <div id="top-bar" class="container">
       <div class="row">
         <div class="span4">
-          <form method="POST" class="search_form">
+          <form action="{{ url_for ('search') }}" method="POST" class="search_form">
             <input
               type="text"
               class="input-block-level search-query"
-              placeholder="eg. T-sirt"
+              id="Name"
+              name="Name"
+              placeholder="Name Product"
             />
           </form>
         </div>
         <div class="span8">
           <div class="account pull-right">
             <ul class="user-menu">
-              
                 {% if Data != 0 %}
-                <li><a href="{{ url_for ('check' , Data=Data) }}">My Account</a></li>
-                <li><a href="{{ url_for ('cart' , Data=Data) }}">Your Cart</a></li>
-                <li><a href="checkout">Checkout</a>
+                <li><a href="{{ url_for ('check') }}">My Account</a></li>
+                <li><a href="{{ url_for ('cart') }}">Your Cart</a></li>
+                <li><a href="{{ url_for ('checkout') }}">Checkout</a></li>
                 {% endif %}
               {% if Data != 0 %}
-              <li><a href="{{ url_for ('register') }}" hidden>Login</a></li>
+              <li><a href="{{ url_for ('logout') }}">Logout</a></li>
+              <li>Credit : {{ session["credit"] }}</li>
               {% else %}
               <li><a href="{{ url_for ('register') }}">Login</a></li>
               {% endif %}
@@ -43,9 +45,9 @@
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
           {% if Data != 0 %}
-          <a href="{{ url_for ('index' , Data=Data ) }}" class="logo pull-left"
+          <a href="{{ url_for ('index') }}" class="logo pull-left"
             >{% else %}
-            <a href="{{ url_for ('index' , Data=0 ) }}" class="logo pull-left"
+            <a href="{{ url_for ('hello_world') }}" class="logo pull-left"
             >{% endif %}<img
               src="../static/themes/images/logo.png"
               class="site_logo"
@@ -53,11 +55,11 @@
           /></a>
           <nav id="menu" class="pull-right">
             <ul>
-              <li><a href="./products.html">FIN</a></li>
-              <li><a href="./products.html">S Project High</a></li>
-              <li><a href="./products.html">Preduce</a></li>
-              <li><a href="./products.html">April</a></li>
-              <li><a href="./products.html">WM</a></li>
+              <li><a href="{{ url_for ('Type', type='FIN') }}">FIN</a></li>
+              <li><a href="{{ url_for ('Type', type='S Project High') }}">S Project High</a></li>
+              <li><a href="{{ url_for ('Type', type='Preduce') }}">Preduce</a></li>
+              <li><a href="{{ url_for ('Type', type='April') }}">April</a></li>
+              <li><a href="{{ url_for ('Type', type='WM') }}">WM</a></li>
             </ul>
           </nav>
         </div>
@@ -106,16 +108,16 @@
                         <li class="span3">
                           <div class="product-box">
                             <p>
-                              <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}"
+                              <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}"
                                 ><img
                                   src="../static/themes/images/skate/{{ IMG[loop.index - 1] }}"
                                   alt=""
                               /></a>
                             </p>
-                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}" class="title"
+                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}" class="title"
                               >{{ mydata[0] }}</a
                             ><br />
-                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}" class="category">Loaded</a>
+                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}" class="category">Loaded</a>
                             <p class="price">{{Price[loop.index - 1]}} ฿ THB</p>
                           </div>
                         </li>
