--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -23,14 +23,16 @@
           <div class="account pull-right">
             <ul class="user-menu">
               <li>
-                <a href="{{ url_for ('check' , Data=ID) }}">My Account</a>
+                <a href="{{ url_for ('check') }}">My Account</a>
               </li>
               <li>
-                <a href="{{ url_for ('cart' , Data=ID) }}">Your Cart</a>
+                <a href="{{ url_for ('cart') }}">Your Cart</a>
               </li>
               <li>
-                <a href="{{ url_for ('checkout' , Data=ID) }}">Checkout</a>
+                <a href="{{ url_for ('checkout') }}">Checkout</a>
               </li>
+              <li><a href="{{ url_for ('logout') }}">Logout</a></li>
+              <li>Credit : {{ session["credit"] }}</li>
             </ul>
           </div>
         </div>
@@ -39,20 +41,20 @@
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
-          {% if Data != 0 %}
-          <a href="{{ url_for ('index' , Data=Data ) }}" class="logo pull-left">
+          {% if ID != 0 %}
+          <a href="{{ url_for ('index') }}" class="logo pull-left">
           {% else %}
-          <a href="{{ url_for ('index' , Data=0 ) }}" class="logo pull-left">
+          <a href="{{ url_for ('index') }}" class="logo pull-left">
           {% endif %}
           <img src="../static/themes/images/logo.png" class="site_logo" alt="" style="width:150px;height:45px;"/>
           </a>
           <nav id="menu" class="pull-right">
             <ul>
-              <li><a href="./products.html">FIN</a></li>
-              <li><a href="./products.html">S Project High</a></li>
-              <li><a href="./products.html">Preduce</a></li>
-              <li><a href="./products.html">April</a></li>
-              <li><a href="./products.html">WM</a></li>
+              <li><a href="{{ url_for ('Type', type='FIN') }}">FIN</a></li>
+              <li><a href="{{ url_for ('Type', type='S Project High') }}">S Project High</a></li>
+              <li><a href="{{ url_for ('Type', type='Preduce') }}">Preduce</a></li>
+              <li><a href="{{ url_for ('Type', type='April') }}">April</a></li>
+              <li><a href="{{ url_for ('Type', type='WM') }}">WM</a></li>
             </ul>
           </nav>
         </div>
@@ -152,6 +154,12 @@
                     name="Data"
                   />
                   <input
+                    type="hidden"
+                    id="credit"
+                    value="{{ credit }}"
+                    name="credit"
+                  />
+                  <input
                   type="hidden"
                     id="DataProduct"
                     name="DataProduct"
@@ -167,9 +175,11 @@
                     value="1"
                     name="QTY"
                   />
+                  {% if DataProduct[4] != 0 %}
                   <button class="btn btn-inverse" type="submit">
                     Add to cart
                   </button>
+                  {% endif %}
                 </form>
               </div>
             </div>
