--- a/templates/register.html
+++ b/templates/register.html
@@ -27,15 +27,8 @@
                 <a href="{{ url_for ('myaccount') }}">My Account</a>
                 <li><a href="cart">Your Cart</a></li>
                 <a href="checkout">Checkout</a>
-                {% else %}
-                <a href="{{ url_for ('myaccount') }}" hidden>My Account</a>
                 {% endif %}
               </li>
-              {% if Data != 0 %}
-              <li><a href="{{ url_for ('register') }}">Login</a></li>
-              {% else %}
-              <li><a href="{{ url_for ('register') }}" hidden>Login</a></li>
-              {% endif %}
             </ul>
           </div>
         </div>
@@ -44,20 +37,20 @@
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
-          <a href="/" class="logo pull-left"
+          <a href="{{ url_for ('hello_world') }}" class="logo pull-left"
             ><img
               src="../static/themes/images/logo.png"
               class="site_logo"
               alt=""
-              style="width: 150px; height: 45px"
+              style="width:150px;height:45px;"
           /></a>
           <nav id="menu" class="pull-right">
             <ul>
-              <li><a href="./products.html">FIN</a></li>
-              <li><a href="./products.html">S Project High</a></li>
-              <li><a href="./products.html">Preduce</a></li>
-              <li><a href="./products.html">April</a></li>
-              <li><a href="./products.html">WM</a></li>
+              <li><a href="{{ url_for ('Type', type='FIN') }}">FIN</a></li>
+              <li><a href="{{ url_for ('Type', type='S Project High') }}">S Project High</a></li>
+              <li><a href="{{ url_for ('Type', type='Preduce') }}">Preduce</a></li>
+              <li><a href="{{ url_for ('Type', type='April') }}">April</a></li>
+              <li><a href="{{ url_for ('Type', type='WM') }}">WM</a></li>
             </ul>
           </nav>
         </div>
@@ -67,6 +60,7 @@
           class="pageBanner"
           src="../static/themes/images/pageBanner.png"
           alt="New products"
+          style="height:250px;"
         />
         <h4><span>Login or Regsiter</span></h4>
       </section>
