--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -73,7 +73,7 @@
           src="../static/themes/images/pageBanner.png"
           alt="New products"
         />
-        <h4><span>Check Out</span></h4>
+        <h4><span>Order History</span></h4>
       </section>
       <section class="main-content">
         <div class="row">
