--- a/templates/cart.html
+++ b/templates/cart.html
@@ -30,7 +30,7 @@
                 >
               </li>
               <li>
-                <a href="{{ url_for ('checkout') }}">Checkout</a>
+                <a href="{{ url_for ('checkout') }}">Order History</a>
               </li>
               <li><a href="{{ url_for ('logout') }}">Logout</a></li>
               <li>Credit : {{ session[ "credit" ] }}</li>
@@ -232,20 +232,19 @@
           <div class="span3">
             <h4>Navigation</h4>
             <ul class="nav">
-              <li><a href="./index.html">Homepage</a></li>
-              <li><a href="./about.html">About Us</a></li>
-              <li><a href="./contact.html">Contac Us</a></li>
-              <li><a href="./cart.html">Your Cart</a></li>
-              <li><a href="./register.html">Login</a></li>
+              <li><a href="{{ url_for ('index') }}">Homepage</a></li>
+              <li><a href="{{ url_for ('index') }}">About Us</a></li>
+              <li><a href="{{ url_for ('index') }}">Contac Us</a></li>
+              <li><a href="{{ url_for ('cart') }}">Your Cart</a></li>
             </ul>
           </div>
           <div class="span4">
             <h4>My Account</h4>
             <ul class="nav">
-              <li><a href="#">My Account</a></li>
-              <li><a href="#">Order History</a></li>
-              <li><a href="#">Wish List</a></li>
-              <li><a href="#">Newsletter</a></li>
+              <li><a href="{{ url_for ('check') }}">My Account</a></li>
+              <li><a href="{{ url_for ('checkout') }}">Order History</a></li>
+              <li><a href="{{ url_for ('cart') }}">Wish List</a></li>
+              <li><a href="{{ url_for ('index') }}">Newsletter</a></li>
             </ul>
           </div>
           <div class="span5">
