--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 {% if Data != 0 %}
                 <li><a href="{{ url_for ('check') }}">My Account</a></li>
                 <li><a href="{{ url_for ('cart') }}">Your Cart</a></li>
-                <li><a href="{{ url_for ('checkout') }}">Checkout</a></li>
+                <li><a href="{{ url_for ('checkout') }}">Order History</a></li>
                 {% endif %}
               {% if Data != 0 %}
               <li><a href="{{ url_for ('logout') }}">Logout</a></li>
@@ -105,7 +105,7 @@
                 <div id="myCarousel" class="myCarousel carousel slide">
                   <div class="carousel-inner">
                     {% for mydata in Name %}
-                        <li class="span3">
+                        <li class="span2">
                           <div class="product-box">
                             <p>
                               <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}"
@@ -117,7 +117,7 @@
                             <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}" class="title"
                               >{{ mydata[0] }}</a
                             ><br />
-                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1]) }}" class="category">Loaded</a>
+                            <a href="{{ url_for ('Type', type=Brand[loop.index - 1]) }}" class="category">{{ Brand[loop.index - 1] }}</a>
                             <p class="price">{{Price[loop.index - 1]}} ฿ THB</p>
                           </div>
                         </li>
@@ -352,20 +352,19 @@
           <div class="span3">
             <h4>Navigation</h4>
             <ul class="nav">
-              <li><a href="./index.html">Homepage</a></li>
-              <li><a href="./about.html">About Us</a></li>
-              <li><a href="./contact.html">Contac Us</a></li>
-              <li><a href="./cart.html">Your Cart</a></li>
-              <li><a href="./register.html">Login</a></li>
+              <li><a href="{{ url_for ('index') }}">Homepage</a></li>
+              <li><a href="{{ url_for ('index') }}">About Us</a></li>
+              <li><a href="{{ url_for ('index') }}">Contac Us</a></li>
+              <li><a href="{{ url_for ('cart') }}">Your Cart</a></li>
             </ul>
           </div>
           <div class="span4">
             <h4>My Account</h4>
             <ul class="nav">
-              <li><a href="#">My Account</a></li>
-              <li><a href="#">Order History</a></li>
-              <li><a href="#">Wish List</a></li>
-              <li><a href="#">Newsletter</a></li>
+              <li><a href="{{ url_for ('check') }}">My Account</a></li>
+              <li><a href="{{ url_for ('checkout') }}">Order History</a></li>
+              <li><a href="{{ url_for ('cart') }}">Wish List</a></li>
+              <li><a href="{{ url_for ('index') }}">Newsletter</a></li>
             </ul>
           </div>
           <div class="span5">
