--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -31,7 +31,7 @@
                 <a href="{{ url_for ('cart') }}">Your Cart</a>
               </li>
               <li>
-                <a href="{{ url_for ('checkout') }}">Checkout</a>
+                <a href="{{ url_for ('checkout') }}">Order History</a>
               </li>
               <li><a href="{{ url_for ('logout') }}">Logout</a></li>
               <li>Credit : {{ session["credit"] }}</li>
@@ -133,7 +133,7 @@
               <!-- Detail สินค้า -->
               <div class="span5">
                 <address>
-                  <strong>Brand:</strong> <span>Loaded</span><br />
+                  <strong>Brand:</strong> <span>{{ DataProduct[6] }}</span><br />
                   <strong>Product Code:</strong>
                   <span>{{ DataProduct[0] }}</span><br />
                   <strong>Reward Points:</strong> <span>0</span><br />
@@ -197,127 +197,6 @@
                   </div>
                 </div>
               </div>
-              <div class="span9">
-                <br />
-                <h4 class="title">
-                  <span class="pull-left"
-                    ><span class="text"
-                      ><strong>Related</strong> Products</span
-                    ></span
-                  >
-                  <span class="pull-right">
-                    <a
-                      class="left button"
-                      href="#myCarousel-1"
-                      data-slide="prev"
-                    ></a
-                    ><a
-                      class="right button"
-                      href="#myCarousel-1"
-                      data-slide="next"
-                    ></a>
-                  </span>
-                </h4>
-                <div id="myCarousel-1" class="carousel slide">
-                  <div class="carousel-inner">
-                    <div class="active item">
-                      <ul class="thumbnails listing-products">
-                        <li class="span3">
-                          <div class="product-box">
-                            <span class="sale_tag"></span>
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/6.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html" class="title"
-                              >Wuam ultrices rutrum</a
-                            ><br />
-                            <a href="#" class="category">Suspendisse aliquet</a>
-                            <p class="price">$341</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <span class="sale_tag"></span>
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/5.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html" class="title"
-                              >Fusce id molestie massa</a
-                            ><br />
-                            <a href="#" class="category">Phasellus consequat</a>
-                            <p class="price">$341</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/4.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html" class="title"
-                              >Praesent tempor sem</a
-                            ><br />
-                            <a href="#" class="category">Erat gravida</a>
-                            <p class="price">$28</p>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="item">
-                      <ul class="thumbnails listing-products">
-                        <li class="span3">
-                          <div class="product-box">
-                            <span class="sale_tag"></span>
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/1.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html" class="title"
-                              >Fusce id molestie massa</a
-                            ><br />
-                            <a href="#" class="category">Phasellus consequat</a>
-                            <p class="price">$341</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/2.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html">Praesent tempor sem</a
-                            ><br />
-                            <a href="#" class="category">Erat gravida</a>
-                            <p class="price">$28</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <span class="sale_tag"></span>
-                            <a href="product_detail.html"
-                              ><img
-                                alt=""
-                                src="../static/themes/images/ladies/3.jpg" /></a
-                            ><br />
-                            <a href="product_detail.html" class="title"
-                              >Wuam ultrices rutrum</a
-                            ><br />
-                            <a href="#" class="category">Suspendisse aliquet</a>
-                            <p class="price">$341</p>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="span3 col">
@@ -337,100 +216,6 @@
               </ul>
               <br />
             </div>
-            <div class="block">
-              <h4 class="title">
-                <span class="pull-left"
-                  ><span class="text">Randomize</span></span
-                >
-                <span class="pull-right">
-                  <a
-                    class="left button"
-                    href="#myCarousel"
-                    data-slide="prev"
-                  ></a
-                  ><a
-                    class="right button"
-                    href="#myCarousel"
-                    data-slide="next"
-                  ></a>
-                </span>
-              </h4>
-              <div id="myCarousel" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="active item">
-                    <ul class="thumbnails listing-products">
-                      <li class="span3">
-                        <div class="product-box">
-                          <span class="sale_tag"></span>
-                          <a href="product_detail.html"
-                            ><img
-                              alt=""
-                              src="../static/themes/images/ladies/7.jpg" /></a
-                          ><br />
-                          <a href="product_detail.html" class="title"
-                            >Fusce id molestie massa</a
-                          ><br />
-                          <a href="#" class="category">Suspendisse aliquet</a>
-                          <p class="price">$261</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="item">
-                    <ul class="thumbnails listing-products">
-                      <li class="span3">
-                        <div class="product-box">
-                          <a href="product_detail.html"
-                            ><img
-                              alt=""
-                              src="../static/themes/images/ladies/8.jpg" /></a
-                          ><br />
-                          <a href="product_detail.html" class="title"
-                            >Tempor sem sodales</a
-                          ><br />
-                          <a href="#" class="category"
-                            >Urna nec lectus mollis</a
-                          >
-                          <p class="price">$134</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="block">
-              <h4 class="title"><strong>Best</strong> Seller</h4>
-              <ul class="small-product">
-                <li>
-                  <a href="#" title="Praesent tempor sem sodales">
-                    <img
-                      src="../static/themes/images/ladies/1.jpg"
-                      alt="Praesent tempor sem sodales"
-                    />
-                  </a>
-                  <a href="#">Praesent tempor sem</a>
-                </li>
-                <li>
-                  <a href="#" title="Luctus quam ultrices rutrum">
-                    <img
-                      src="../static/themes/images/ladies/2.jpg"
-                      alt="Luctus quam ultrices rutrum"
-                    />
-                  </a>
-                  <a href="#">Luctus quam ultrices rutrum</a>
-                </li>
-                <li>
-                  <a href="#" title="Fusce id molestie massa">
-                    <img
-                      src="../static/themes/images/ladies/3.jpg"
-                      alt="Fusce id molestie massa"
-                    />
-                  </a>
-                  <a href="#">Fusce id molestie massa</a>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
       </section>
@@ -439,20 +224,19 @@
           <div class="span3">
             <h4>Navigation</h4>
             <ul class="nav">
-              <li><a href="./index.html">Homepage</a></li>
-              <li><a href="./about.html">About Us</a></li>
-              <li><a href="./contact.html">Contac Us</a></li>
-              <li><a href="./cart.html">Your Cart</a></li>
-              <li><a href="./register.html">Login</a></li>
+              <li><a href="{{ url_for ('index') }}">Homepage</a></li>
+              <li><a href="{{ url_for ('index') }}">About Us</a></li>
+              <li><a href="{{ url_for ('index') }}">Contac Us</a></li>
+              <li><a href="{{ url_for ('cart') }}">Your Cart</a></li>
             </ul>
           </div>
           <div class="span4">
             <h4>My Account</h4>
             <ul class="nav">
-              <li><a href="#">My Account</a></li>
-              <li><a href="#">Order History</a></li>
-              <li><a href="#">Wish List</a></li>
-              <li><a href="#">Newsletter</a></li>
+              <li><a href="{{ url_for ('check') }}">My Account</a></li>
+              <li><a href="{{ url_for ('checkout') }}">Order History</a></li>
+              <li><a href="{{ url_for ('cart') }}">Wish List</a></li>
+              <li><a href="{{ url_for ('index') }}">Newsletter</a></li>
             </ul>
           </div>
           <div class="span5">
