--- a/templates/cart.html
+++ b/templates/cart.html
@@ -131,7 +131,7 @@
               <a href="{{ url_for ('index') }}" class="btn" type="button">Continue</a>
               {% if choice == 1 %}
               {% if session["sum"] > 0 %}
-              {% if session["sum"] >= session["credit"] %} Credit is not
+              {% if session["sum"] > session["credit"] %} Credit is not
                       enough
                       <a
                         href="{{ url_for ('check') }}"
@@ -180,49 +180,6 @@
                   ></a>
                 </span>
               </h4>
-              <div id="myCarousel" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="active item">
-                    <ul class="thumbnails listing-products">
-                      <li class="span3">
-                        <div class="product-box">
-                          <span class="sale_tag"></span>
-                          <a href="product_detail.html"
-                            ><img
-                              alt=""
-                              src="../static/themes/images/ladies/2.jpg" /></a
-                          ><br />
-                          <a href="product_detail.html" class="title"
-                            >Fusce id molestie massa</a
-                          ><br />
-                          <a href="#" class="category">Suspendisse aliquet</a>
-                          <p class="price">$261</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="item">
-                    <ul class="thumbnails listing-products">
-                      <li class="span3">
-                        <div class="product-box">
-                          <a href="product_detail.html"
-                            ><img
-                              alt=""
-                              src="../static/themes/images/ladies/4.jpg" /></a
-                          ><br />
-                          <a href="product_detail.html" class="title"
-                            >Tempor sem sodales</a
-                          ><br />
-                          <a href="#" class="category"
-                            >Urna nec lectus mollis</a
-                          >
-                          <p class="price">$134</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
