--- a/templates/admin.html
+++ b/templates/admin.html
@@ -124,7 +124,7 @@
 									<label class="control-label"
 									  ><h4>
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ID :
-										<input type="number" name="ID" id="ID" value=""/></h4></label>
+										<input type="text" name="ID" id="ID" value=""/></h4></label>
 								  </div>
 								<div class="controls-group">
 								  <label class="control-label"
