--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -280,7 +280,7 @@
                   {% elif loop.index == 2 %} Username : <input type="text" id="username" name="username" value="{{ NE[0] }}" readonly /></h4>{% else %}
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; credits : 
                         <input
-                          type="text"
+                          type="number"
                           id="credit"
                           name="credit"
                           value="{{ NE[0] }}"
