--- a/templates/admin.html
+++ b/templates/admin.html
@@ -118,14 +118,13 @@
 							  <span class="text"><strong>Edit</strong>User Form</span>
 							</h4>
 						<form action="{{ url_for ('Updateuser') }}" method="post" align="center">
-							  <input type="hidden" value="/" />
 							  <fieldset>
-								<div class="controls">
+								<!-- <div class="controls">
 									<label class="control-label"
 									  ><h4>
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ID :
 										<input type="text" name="ID" id="ID" value=""/></h4></label>
-								  </div>
+								  </div> -->
 								<div class="controls-group">
 								  <label class="control-label"
 									><h4>
